<resources>
    <string name="app_name">Rajway</string>
    <string-array name="image_selection">
        <item>@string/capture_from_camera</item>
        <item>@string/pick_gallery</item>
    </string-array>
    <string name="facebook_app_id">1103351023414522</string>
    <string name="fb_login_protocol_scheme">fb1103351023414522</string>
    <string name="google_map_key">AIzaSyCsPhnTTzy7vsbbJuThzzfSQOQRf1D4mWY</string>
    <string name="default_notification_channel_id">71717</string>
    <string name="default_notification_channel_name">bringIt</string>
    <string name="error_network_connection">You are not connected with an active internet connection.</string>
    <string name="no">No</string>
    <string name="no_saved_card">No Card Added</string>
    <string name="yes">Yes</string>
    <string name="enter_email">Please enter email address.</string>
    <string name="valid_email">Please enter valid email address.</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_old_password">Please enter old password</string>
    <string name="enter_your_name">Please enter your name</string>
    <string name="enter_phone_number">Please enter mobile number</string>
    <string name="enter_confirm_password">Please enter confirm password</string>
    <string name="enter_card_holder_name">Please enter card holder name</string>
    <string name="enter_card_details">Please enter card details</string>
    <string name="enter_card_number">Please enter valid card number</string>
    <string name="password_confirm_password_not_same"><![CDATA[Password & Confirm Password not same]]></string>
    <string name="invalid_password">Password must contain at least one alphabet and numeric character.</string>
    <string name="minimum_charecter">Please Enter Minimum 6 Charter.</string>
    <string name="enter_valid_phone_number">Phone number should be min 7 and max 15 characters</string>
    <string name="password_length_validation">Password should be min 6 characters</string>
    <string name="name_validation">Name should be min 3 and max 30 characters.</string>
    <string name="email_contect_no_required">Email/Contact No. required</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="please_accept_terms_conditon">Please accept terms and condition</string>
    <string name="and"><![CDATA[&]]></string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="sign_up">Sign up</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="welcome_back">Welcome to bring it</string>
    <string name="lets_get_started">Let\'s get started</string>
    <string name="mobile_email">Email Address/Phone Number</string>
    <string name="txt_password">Password</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_signin_with">Sign in with</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_to_get_started">Sign up to get started</string>
    <string name="name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="enter_referral_code">Enter referral Code</string>
    <string name="agree_to_our">I\'ve read and accept</string>
    <string name="use_my_location">Use my Location</string>
    <string name="add">Add</string>
    <string name="forgot_password_subtext">Please enter the email to reset your password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="here">here</string>
    <string name="or_signup_with">Or Sign up with</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="safty">Safety</string>
    <string name="my_account">My Account</string>
    <string name="group">Group</string>
    <string name="want_to_logout">Are you sure you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="notification">Notifications</string>
    <string name="manage_address">Manage Address</string>
    <string name="my_wallet">My Wallet</string>
    <string name="change_password">Change Password</string>
    <string name="add_address">Add Address</string>
    <string name="address_list">Address List</string>
    <string name="address_type">Address Type</string>
    <string name="office">Office</string>
    <string name="other">Other</string>
    <string name="search_offer">Search Offer</string>
    <string name="apply">Apply</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="address1">Add Address</string>
    <string name="house_flat_block">Home/Flat/Block No.</string>
    <string name="landmark">Landmark</string>
    <string name="select_delivery_zone">Select Delivery Zone</string>
    <string name="camera_permission_denied">Permission denied to read your External storage</string>
    <string name="missing_read_permission">Permission denied to read your External storage</string>
    <string name="permission_denied">Permission request denied</string>
    <string name="search_zone">Search Zone</string>
    <string name="close">Close</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="select_option">Select a Option</string>
    <string name="capture_from_camera">Capture Image</string>
    <string name="pick_gallery">Pick From Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="next_step">Next Step</string>
    <string name="verify_tour_mobile">Verify Your Mobile!</string>
    <string name="enter_otp">Please enter activation code which you receive from mobile</string>
    <string name="resend_code">Resend OTP</string>
    <string name="invalid_otp">Please enter valid OTP.</string>
    <string name="sec">Sec</string>
    <string name="_dash">- - - - - -</string>
    <string name="verification">Verification</string>
    <string name="dont_receive_otp">"Didn't receive the OTP"</string>
    <string name="bus_ticket">Bus Ticket</string>
    <string name="enter_source">ENTER SOURCE</string>
    <string name="enter_destination">ENTER DESTINATION</string>
    <string name="today">Today</string>
    <string name="tomarrow">Tomorrow</string>
    <string name="search">Search</string>
    <string name="book_now">Book Now</string>
    <string name="recent_booking">Recent Booking</string>
    <string name="latest_offer">Latest Offer</string>
    <string name="near_by">Near By</string>
    <string name="or">or</string>
    <string name="ac">AC</string>
    <string name="non_ac">NonAC</string>
    <string name="seater">Seater</string>
    <string name="sleeper">Sleeper</string>
    <string name="start_from">Start from</string>
    <string name="track_bus">Track Bus</string>
    <string name="report">Report</string>
    <string name="share">Share</string>
    <string name="navigate">Navigate</string>
    <string name="make_payment">Make Payment</string>
    <string name="non_refundable">Non-Refundable</string>
    <string name="bus_tracking">Bus Tracking</string>
    <string name="lower">Lower</string>
    <string name="upper">Upper</string>
    <string name="done">Done</string>
    <string name="boarding">Boarding</string>
    <string name="dropping">Dropping</string>
    <string name="need_help_selection_boarding_points">Need help selecting a boarding point?</string>
    <string name="set_a_landmark_street_area">Set a landmark, street or area</string>
    <string name="process">Process</string>
    <string name="excluding_taxes">(Excluding taxes)</string>
    <string name="contact_information">Contact Details</string>
    <string name="passenger_details">Passenger Details</string>
    <string name="p_name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="passenger">Passenger</string>
    <string name="by_clicking_on_continue_booking_agree_to_the">By clicking on continue Booking, I agree to all the</string>
    <string name="and_text">and</string>
    <string name="insure_your_travel_by_adding_money">Insure your travel by adding Rs 20 per passenger Powered by HDFC Ergo Insurance Ltd.</string>
    <string name="loss_of_baggage">Loss of baggage</string>
    <string name="upto_5000_insurance_cover">Upto Rs. 5000 insurance cover</string>
    <string name="yes_secure_my_trip_with_insurance_i_have">Yes,secure my trip with insurance. I  have read,understood and agree to the <font color='#bd0835'>Privacy and Policy</font></string>
    <string name="terms_and_condition">Terms and Conditions</string>
    <string name="loss_of_life">Loss of Life</string>
    <string name="my_orders">My Bookings</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="look_empty_no_completed_trips_found">Look empty, no completed trips found.</string>
    <string name="send_location">Send Location</string>
    <string name="received_loation">Received Location</string>
    <string name="look_empty_no_booking_trip_found">Look empty, no booking trip found.</string>
    <string name="booking_details">Booking Details</string>
    <string name="select_contact_number">Select Contact Number</string>
    <string name="join">Join</string>
    <string name="location">Location</string>
    <string name="tell_your_friends_about_zoom">Tell your friends about Rajway</string>
    <string name="available_referral_discounts">Available referral discounts:</string>
    <string name="your_successful_referrals">Your successful referrals:</string>
    <string name="invite_text_msg">Invite your friends to zoom using your code and you both get discount on next orders.</string>
    <string name="referal_code">Enter referral code</string>
    <string name="share_your_invite_code">Share</string>
    <string name="referal_discount">Referral Discount</string>
    <string name="share_referal_code">Share Referral Code</string>
    <string name="congratulations">Congratulations</string>
    <string name="coupon_code">Referral Code</string>
    <string name="tap_to_copy">Tap to copy</string>
    <string name="copied_text">Copied Text</string>
    <string name="text_copy_successfully">Refer code copy successfully</string>
    <string name="you_have_got">You\'ve got</string>
    <string name="share_coupon_code">Share Referral Code</string>
    <string name="refer_earn"><![CDATA[Refer & Earn]]></string>
    <string name="my_booking">My Bookings</string>
    <string name="offers">Offers</string>
    <string name="bus_operator">Bus Operator</string>
    <string name="bus_features">Bus Features</string>
    <string name="live_tracking">Live Tracking</string>
    <string name="high_rated_buses">High Rated Buses</string>
    <string name="reschedulable">Reschedulable</string>
    <string name="Bus_arrival_time_destination">Bus Arrival Time At Destination</string>
    <string name="sort_by">Sort By</string>
    <string name="best_rated_first">Best Rated First</string>
    <string name="filter_by">Filter By</string>
    <string name="cheapest_first">Cheapest First</string>
    <string name="early_departure">Early Departure</string>
    <string name="late_departure">Late Departure</string>
    <string name="clear">Clear</string>
</resources>