<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_booking"
        android:title="@string/booking"
        />
    <item
        android:id="@+id/navigation_safety"
        android:icon="@drawable/ic_help"
        android:title="@string/safty"
        app:showAsAction="ifRoom"
        android:visible="true"
        />
    <item
        android:id="@+id/navigation_group"
        android:icon="@drawable/ic_baseline_group_24"
        android:title="@string/group"
        />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_my_account"
        android:title="@string/my_account"
        />

</menu>